# fledge-south-s2opcua

./: .gitignore  CMakeLists.txt  Description  Package  README.md  README.rst  S2OPC.patch  cleanup  opcua.cpp  plugin.cpp  requirements.sh
docs/: index.rst
include/: opcua.h  parser.h
tests/: CMakeLists.txt  test_info.cpp
